    - Mac OS X: fixed name collision of enum in EffectControl and
      wrong name of destructor in AudioOutputDeviceCoreAudio.cpp
    - Mac OS X: fixed hanging threads
    - Windows: disabled the previous thread fix on non-Mac systems, as
      it caused hanging threads on Windows
    - Fixed possible crashes due to corrupted MIDI/audio device list
      after MIDI/audio device creation failure

Version 1.0.0 (31 July 2009)

  * packaging changes:
    - autoconf bugfix: the PKG_CONFIG variable wasn't initialized properly,
      causing e.g. the libgig test to fail when
      "./configure --disable-jack-driver" was used
      (patch by Alexis Ballier)
    - fixed compilation with gcc 4.3
    - fixes for building on OS X (thanks to Ebrahim Mayat for testing)
    - fixed configure so it detects x86_64 (#107)
    - fixes for building with newer MinGW versions
    - fix for building with bison 2.4 (#111)
    - fixed building with libgig installed in a non-standard directory
    - minor fix in configure for mmsystem.h detection on MinGW
    - Windows: look for editor plugins and Fantasia using base
      directory of liblinuxsampler dll (look in the same directory and one
      directory above)
    - configure script fix: removed unconditional use of SSE
    - fixed building with sqlite installed in a non-standard directory
    - when cross-compiling, don't try to create instruments.db
    - fix for new mingw-w64 version, which has usleep

  * general changes:
    - bugfix: on some POSIX systems instrument editor plugins refused to
      load as we used a non-portable Linux specific struct field
      (fixes bug #70, patch by Ronald Baljeu)
    - fixed endless loop which occured when loading an instrument editor
      plugin DLL on Windows systems failed
    - fixed memory leaks that occurred when liblinuxsampler was unloaded
    - optimized the SynchronizedConfig class so it doesn't wait
      unnecessarily long after an update